--- a/02-desafio-coffee-delivery/.eslintrc.json
+++ b/02-desafio-coffee-delivery/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "@rocketseat/eslint-config/react"
+  "extends": [
+    "@rocketseat/eslint-config/react",
+    "plugin:cypress/recommended"
+    ],
+  "plugins": [
+    "cypress"
+  ]
 }
