--- a/02-desafio-coffee-delivery/package.json
+++ b/02-desafio-coffee-delivery/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -27,6 +27,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "cypress": "^12.17.4",
     "eslint": "^8.45.0",
+    "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
