--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,11 @@ jobs:
         uses: actions/checkout@v3
       # Install NPM dependencies, cache them correctly
       # and run all Cypress tests
+      - name: access directory
+        run: cd 02-desafio-coffee-delivery
+        
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          build: npm run build
+          build: cd npm run build
           start: npm start
